--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -18,6 +18,8 @@
   --light-gray: #F2F2F2;
   --medium-dark-gray: #D2D2D2;
   --medium-light-gray: #BDBDBD;
+  --orange: #FF9D42;
+  --purple: #8A5CF7;
   --teal-accent: #39C6C0;
   --teal-light: #F7FDFC;
   --teal-pressed: #227773;
